// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reveal renders when the transition is not triggered 1`] = `
<div
  aria-hidden="true"
  data-testid="childrenContainer"
  style="transition:height 500ms;overflow:hidden;height:0;visibility:hidden"
>
  <div>
    Content to reveal
  </div>
</div>
`;

exports[`Reveal renders when the transition is triggered 1`] = `
<div
  aria-hidden="false"
  data-testid="childrenContainer"
  style="transition:height 500ms;overflow:visible;height:300px"
>
  <div>
    Content to reveal
  </div>
</div>
`;
